# ros2_new

./: .gitignore  Dockerfile  GUIDE.md  README.md  TODO.md  build.sh  compose.yaml  flake.nix
.cache/clangd/index/: add_two_ints_client.cpp.BA442E33FA82C6C4.idx  add_two_ints_server.cpp.C2A7E6CB7563B2DE.idx  aruco_detector_node.cpp.A83D3B00757B0A11.idx  camera_publisher_node.cpp.744B4875C0EFD0ED.idx
.docker/: flake.nix  result
.github/: lint.yml
.github/workflows/: lint.yml
colcon_ws/: .clangd
src/: FAQ.md  HowToBuild.md
src/aruco_detector/: CMakeLists.txt  package.xml
src/aruco_detector/include/: cv_bridge.hpp
src/aruco_detector/launch/: aruco_launch.py
src/aruco_detector/src/: aruco_detector_node.cpp  camera_publisher_node.cpp
src/buzzer/: CMakeLists.txt  package.xml
src/buzzer/include/buzzer/: buzzer_node.hpp
src/buzzer/src/: buzzer_node.cpp
src/diff_drive/: CMakeLists.txt  package.xml
src/diff_drive/include/diff_drive/: artemka.hpp
src/diff_drive/src/: mission_master_node.cpp  motor_node.cpp
src/ld06_lidar/: CMakeLists.txt  package.xml
src/ld06_lidar/include/ld06_lidar/: ld06_node.hpp  ld06_ros_node.hpp  ld06_safety_node.hpp  ld06_serial_libserialport.hpp
src/ld06_lidar/launch/: ld06_launch.py  ld06_safety.yaml
src/ld06_lidar/src/: _ld06_safety_node.cpp  ld06_ros_node.cpp  ld06_safety_node.cpp  ld06_serial_libserialport.cpp  ld06_utils.cpp
